--- a/spring-boot-web-curso-2023/src/main/resources/templates/index.html
+++ b/spring-boot-web-curso-2023/src/main/resources/templates/index.html
@@ -7,11 +7,11 @@
     <title>My Website</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <title th:text="${titulo}</title>
+    <title th:text="${titulo}"</title>
 </head>
 <body>
 <main>
-    <h1>"${titulo}</h1>
+    <h1>"${titulo}"</h1>
 </main>
 <script src="index.js"></script>
 </body>
