added first level route

--- a/spring-boot-web-curso-2023/src/main/resources/templates/perfil.html
+++ b/spring-boot-web-curso-2023/src/main/resources/templates/perfil.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title th:text="${titulo}"</title>
 </head>
 <body>
-
+<main>
+  <h1>"${titulo}"</h1>
+</main>
 </body>
 </html>
