--- a/spring-boot-web-curso-2023/src/main/resources/templates/index.html
+++ b/spring-boot-web-curso-2023/src/main/resources/templates/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title th:text="${titulo}"</title>
+    <meta charset="UTF-8" />
+    <title th:text="${titulo}"></title>
 </head>
 <body>
-<main>
-    <h1>"${titulo}"</h1>
-</main>
+    <h1 th:text="${titulo}"></h1>
 </body>
 </html>
