--- a/spring-boot-web-curso-2023/src/main/resources/templates/perfil.html
+++ b/spring-boot-web-curso-2023/src/main/resources/templates/perfil.html
@@ -11,6 +11,6 @@
 
 <span th:if="${usuario.email}" th:text="${usuario.email}"></span></br>
 
-<span th:if="${usuario.email == null}" th:text="'el usuario no tiene email'"></span>
+<span th:if="${usuario.email == null}">El usuario no tiene email</span>
 </body>
 </html>
