--- a/spring-boot-web-curso-2023/src/main/resources/templates/variables/ver.html
+++ b/spring-boot-web-curso-2023/src/main/resources/templates/variables/ver.html
@@ -2,10 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Recibir parametro del request HTTP GET - URL</title>
+    <title  th:text="${titulo}"></title>
 </head>
 <body>
-<h1>Recibir parametro del request HTTP GET - URL</h1>
+<h1 th:text="${titulo}" ></h1>
 <div th:text="${resultado}"></div>
 </body>
 </html>
